# TaaS

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
doc/: screenlog.0  technical-overview.md
orchestrator/: Cargo.toml  enable_autocomplete.sh  last_deployment_replacements.yml  last_deployment_summary.yml
orchestrator/config/: common_os.yml  default_values.yml  network.yml  provider.yml  providers_config.yml  shell.yml  ssh.yml  webserver.yml
orchestrator/scenarios/test/: pipeline.run  system.yml
orchestrator/src/: main.rs  paths.rs
orchestrator/src/asir/: mod.rs
orchestrator/src/azuresir/: emitter.rs  mod.rs  system.rs  translator.rs  utils.rs
orchestrator/src/cloud_functions/: azure.rs  mod.rs
orchestrator/src/lasir/: connections.rs  machines.rs  translator.rs
orchestrator/src/logger/: mod.rs
orchestrator/src/orchestrator/: mod.rs
orchestrator/src/pasir/: connections.rs  machines.rs  mod.rs  translator.rs
orchestrator/src/pipelines/: azure_cli.rs  mod.rs
orchestrator/src/post_deployment/: mod.rs
orchestrator/src/script_push/: azure.rs  mod.rs
orchestrator/src/shell_tools/: mod.rs
orchestrator/src/utils/: files.rs  global_config.rs  macros.rs  math.rs  mod.rs  replace.rs  roles.rs  run_parser.rs  types.rs
orchestrator/src/yamlsir/: default.rs  mod.rs
orchestrator/test-deployment/test/: step_setup.0.sh
orchestrator/webserver/: orche.service  webserver  webserver_setup.sh
