[package]
name = "orchestrator"
version = "0.1.0"
authors = ["Jonathan Scanzi <jonathan.scanzi.95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
regex = "1"
lazy_static = "1.3.0"
serde = { version = "1.0.97", features = ["derive"] }
serde_yaml = "0.8.9"
serde_json = "1.0"
fs_extra = "1.1.0"
base64 = "0.10.1"
rand = "0.7.0"
chrono = "0.4"